--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
 
     <title>Skola Home v5</title>
 
+    <script src="https://kit.fontawesome.com/0e5fa0ea8a.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
