Added functionalities related to course page, search and filters

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,6 +1,7 @@
 // Frontend 
 -------------------
 {% extends 'base.html' %}
+{% block title %}Register{% endblock %}
 {% block content %}
 <!-- PAGE TITLE
     ================================================== -->
