--- a/templates/Main/aboutus.html
+++ b/templates/Main/aboutus.html
@@ -3,7 +3,7 @@
 
 
 {% extends 'base.html' %}
-{% block title %}about us{% endblock %}
+{% block title %}About Us{% endblock %}
 {% block content %}
 {% load static %}
 <!-- PAGE TITLE
