--- a/templates/base.html
+++ b/templates/base.html
@@ -31,9 +31,10 @@
     <!-- Theme CSS -->
     <link rel="stylesheet" href="{% static 'assets/css/theme.min.css' %}">
 
-    <title>Skola Home v5</title>
+    <title>Skola - {% block title %}{% endblock %}</title>
 
     <script src="https://kit.fontawesome.com/0e5fa0ea8a.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
 
