register forms and logo

--- a/templates/components/modals.html
+++ b/templates/components/modals.html
@@ -168,9 +168,22 @@
                                 <label for="modalSignupUsername">
                                     Username
                                 </label>
-                                <input type="text" class="form-control" id="modalSignupUsername" placeholder="John" name="username">
+                                <input type="text" class="form-control" id="modalSignupUsername" placeholder="John12" name="username">
                             </div>
-
+                    <!-- firstname -->
+                            <div class="form-group mb-5">
+                                <label for="modalSignupFirstname">
+                                    First Name
+                                </label>
+                                <input type="text" class="form-control" id="modalSignupFirstname" placeholder="John" name="firstname">
+                            </div>
+                             <!-- lastname -->
+                            <div class="form-group mb-5">
+                                <label for="modalSignupLastname">
+                                    Last Name
+                                </label>
+                                <input type="text" class="form-control" id="modalSignupLastname" placeholder="Doe" name="lastname">
+                            </div>
                             <!-- Email -->
                             <div class="form-group mb-5">
                                 <label for="modalSignupEmail">
