--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -60,6 +60,20 @@
                         </label>
                         <input type="password" class="form-control" id="modalSignupPassword3" placeholder="**********" name="password">
                     </div>
+<!-- firstname -->
+                            <div class="form-group mb-5">
+                                <label for="modalSignupFirstname">
+                                    First Name
+                                </label>
+                                <input type="text" class="form-control" id="modalSignupFirstname" placeholder="John" name="firstname">
+                            </div>
+                             <!-- lastname -->
+                            <div class="form-group mb-5">
+                                <label for="modalSignupLastname">
+                                    Last Name
+                                </label>
+                                <input type="text" class="form-control" id="modalSignupLastname" placeholder="Doe" name="lastname">
+                            </div>
 
                     <!-- Submit -->
                     <button class="btn btn-block btn-primary" type="submit">
