--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
     <!-- Theme CSS -->
     <link rel="stylesheet" href="{% static 'assets/css/theme.min.css' %}">
 
-    <title>Skola - {% block title %}{% endblock %}</title>
+    <title>Uwindsor LMS - {% block title %}{% endblock %}</title>
 
     <script src="https://kit.fontawesome.com/0e5fa0ea8a.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
