--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -5,7 +5,7 @@
 
             <!-- Brand -->
             <a class="navbar-brand" href="index.html">
-                <img src="{% static 'assets/img/brand-gigas.svg' %}" class="navbar-brand-img" alt="...">
+                <img src="{% static 'assets/img/logo.svg' %}" class="navbar-brand-img" alt="...">
             </a>
 
             <!-- Vertical Menu -->
