added membership subscription and discounts for our members

--- a/templates/ajax/course.html
+++ b/templates/ajax/course.html
@@ -99,9 +99,9 @@
                                             </div>
                                         {% else %}
                                         <div class="col-auto px-2 text-right">
-                                                <del class="font-size-sm">₹ {{ i.price }}</del>
+                                                <del class="font-size-sm">$ {{ i.price }}</del>
                                                 <ins class="h4 mb-0 d-block mb-lg-n1">
-                                                    ₹ {% discount_calculation i.price i.discount %}</ins>
+                                                    $ {% discount_calculation i.price i.discount %}</ins>
                                             </div>
                                         {% endif %}
                                     </div>
