--- a/templates/checkout/membership_checkout.html
+++ b/templates/checkout/membership_checkout.html
@@ -1,20 +1,20 @@
 {% extends 'base.html' %}
-{% block title %} checkout{% endblock %}
+{% block title %} Membership checkout{% endblock %}
 {% block content %}
     <!-- PAGE TITLE
     ================================================== -->
     <header class="py-8 py-md-10" style="background-image: none;">
         <div class="container text-center py-xl-2">
-            <h1 class="display-4 fw-semi-bold mb-0">Shop Checkout</h1>
+            <h1 class="display-4 fw-semi-bold mb-0">Gold Membership Checkout</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-scroll justify-content-center">
                     <li class="breadcrumb-item">
-                        <a class="text-gray-800" href="{% url 'home' %}">
+                        <a class="text-gray-800" href="">
                             Home
                         </a>
                     </li>
                     <li class="breadcrumb-item text-gray-800 active" aria-current="page">
-                        Shop Checkout
+                        Membership Checkout
                     </li>
                 </ol>
             </nav>
@@ -27,7 +27,7 @@
     <!-- SHOP CHECKOUT
     ================================================== -->
     <div class="container pb-6 pb-xl-10">
-        <form name="checkout" method="post" class="checkout woocommerce-checkout" action="" >
+        <form name="checkout" method="post" class="checkout woocommerce-checkout" action="{% url 'gold_member_register' %}" >
             {% csrf_token %}
             <div class="col2-set" id="customer_details">
                 <div class="col-1">
@@ -35,16 +35,28 @@
                         <h3>Billing details</h3>
                         <div class="woocommerce-billing-fields__field-wrapper">
                             <p class="form-row form-row-first validate-required woocommerce-invalid woocommerce-invalid-required-field" id="billing_first_name_field" data-priority="10">
-                                <label for="billing_first_name" class="">First name <abbr class="required" title="required">*</abbr></label>
-                                <input type="text" class="input-text " name="billing_first_name" id="billing_first_name" placeholder="" value="{{ user.first_name }}" autocomplete="given-name" autofocus="autofocus" required>
+                                <label for="billing_firstname" class="">First name <abbr class="required" title="required">*</abbr></label>
+                                <input type="text" class="input-text " name="billing_first_name" id="billing_firstname" placeholder="" value="{{ first_name }}" autocomplete="given-name" autofocus="autofocus" required>
                             </p>
                             <p class="form-row form-row-last validate-required" id="billing_last_name_field" data-priority="20">
-                                <label for="billing_last_name" class="">Last name <abbr class="required" title="required">*</abbr></label>
-                                <input type="text" class="input-text " name="billing_last_name" id="billing_last_name" placeholder="" value="{{ user.last_name }}" autocomplete="family-name" required>
+                                <label for="billing_lastname" class="">Last name <abbr class="required" title="required">*</abbr></label>
+                                <input type="text" class="input-text " name="billing_last_name" id="billing_lastname" placeholder="" value="{{ last_name }}" autocomplete="family-name" required>
+                            </p>
+                            <p class="form-row form-row-last validate-required" id="billing_username_field" data-priority="20">
+                                <label for="billing_username_field" class="">user name <abbr class="required" title="required">*</abbr></label>
+                                <input type="text" class="input-text " name="billing_user_name" id="billing_username" placeholder="" value="{{ user_name }}" autocomplete="family-name" required>
+                            </p>
+                            <p class="form-row form-row-last validate-required" id="" data-priority="20">
+                                <label for="billing_username_field" class="">email <abbr class="required" title="required">*</abbr></label>
+                                <input type="email" class="input-text " name="billing_user_email" id="billing_email" placeholder="" value="{{ user_email }}" autocomplete="family-name" required>
+                            </p>
+                            <p class="form-row form-row-last validate-required" id="billing_password_field" data-priority="20">
+                                <label for="billing_username_field" class="">password <abbr class="required" title="required">*</abbr></label>
+                                <input type="password" class="input-text " name="billing_user_password" id="billing_password" placeholder="" value="{{ user_password }}" autocomplete="family-name" required>
                             </p>
                             <h3>Card details</h3>
 
-                            <p class="form-row form-row-last validate-required" id="billing_email_field" data-priority="110">
+                            <p class="form-row form-row-last validate-required" id="billing_card_field" data-priority="110">
                                 <label for="cc_num" class="">Card number<abbr class="required" title="required">*</abbr></label>
                                 <input type="number" class="input-text" name="Card_number" id="Card_number" placeholder="16 digit debit card number" value="" required>
                             </p>
@@ -57,7 +69,11 @@
                                 <input type="text" class="input-text " name="expiry_month" id="expiry_month" placeholder="MM/YY" value="" required>
                             </p>
                         </div>
+
+
                     </div>
+
+
                 </div>
 
             </div>
@@ -76,13 +92,13 @@
 
                             <tr class="cart_item">
                                 <td class="product-name">
-                                    {{ course.title }}
+                                    Gold Membership
                                     <strong class="product-quantity">× 1</strong>
                                 </td>
                                 <td class="product-total">
                                     <span class="woocommerce-Price-amount amount">
                                         <span class="woocommerce-Price-currencySymbol">$</span>
-                                        {{ course.price }}
+                                        199
                                     </span>
                                 </td>
                             </tr>
@@ -92,7 +108,7 @@
 
                             <tr class="order-total">
                                 <th>Total</th>
-                                <td><strong><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">$</span>{{ course.price }}</span></strong> </td>
+                                <td><strong><span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol">$</span>199</span></strong> </td>
                             </tr>
                         </tfoot>
                     </table>
@@ -101,7 +117,7 @@
                 <div id="payment" class="woocommerce-checkout-payment">
 
                     <div class="form-row place-order">
-                        <input class="btn btn-primary btn-block" type="submit" value="PLACE ORDER" />
+                        <input class="btn btn-primary btn-block" type="submit" value="Join Nex Learn" />
 
                     </div>
                 </div>
