--- a/templates/Main/home.html
+++ b/templates/Main/home.html
@@ -127,7 +127,7 @@
                                             </div>
 
                                             <div class="font-size-sm">
-                                                <span>5.45 (5.8k+ reviews)</span>
+                                                <span></span>
                                             </div>
                                         </div>
 
@@ -143,20 +143,17 @@
                                                                 </svg>
 
                                                             </div>
-                                                            <div class="font-size-sm">5 lessons</div>
+                                                            <div class="font-size-sm">{{ i.lesson_set.all.count }} lessons</div>
                                                         </div>
                                                     </li>
                                                     <li class="nav-item px-3">
                                                         <div class="d-flex align-items-center">
                                                             <div class="me-2 d-flex icon-uxs text-secondary">
                                                                 <!-- Icon -->
-                                                                <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-                                                                    <path d="M14.3164 4.20996C13.985 4.37028 13.8464 4.76904 14.0067 5.10026C14.4447 6.00505 14.6667 6.98031 14.6667 8C14.6667 11.6759 11.6759 14.6667 8 14.6667C4.32406 14.6667 1.33333 11.6759 1.33333 8C1.33333 4.32406 4.32406 1.33333 8 1.33333C9.52328 1.33333 10.9543 1.83073 12.1387 2.77165C12.4259 3.00098 12.846 2.95296 13.0754 2.66471C13.3047 2.37663 13.2567 1.95703 12.9683 1.72803C11.5661 0.613607 9.8016 0 8 0C3.58903 0 0 3.58903 0 8C0 12.411 3.58903 16 8 16C12.411 16 16 12.411 16 8C16 6.77767 15.7331 5.60628 15.2067 4.51969C15.0467 4.18766 14.6466 4.04932 14.3164 4.20996Z" fill="currentColor"/>
-                                                                    <path d="M7.99967 2.66663C7.63167 2.66663 7.33301 2.96529 7.33301 3.33329V7.99996C7.33301 8.36796 7.63167 8.66663 7.99967 8.66663H11.333C11.701 8.66663 11.9997 8.36796 11.9997 7.99996C11.9997 7.63196 11.701 7.33329 11.333 7.33329H8.66634V3.33329C8.66634 2.96529 8.36768 2.66663 7.99967 2.66663Z" fill="currentColor"/>
-                                                                </svg>
+
 
                                                             </div>
-                                                            <div class="font-size-sm">8h 12m</div>
+                                                            <div class="font-size-sm"></div>
                                                         </div>
                                                     </li>
                                                 </ul>
@@ -168,7 +165,7 @@
                                             </div>
                                         {% else %}
                                         <div class="col-auto px-2 text-right">
-                                                <del class="font-size-sm">$ {{ i.course.price }}</del>
+                                                <del class="font-size-sm">$ {{ i.price }}</del>
                                                 <ins class="h4 mb-0 d-block mb-lg-n1">
                                                     $ {% discount_calculation i.price i.discount %}</ins>
                                             </div>
@@ -215,7 +212,7 @@
                                         </a>
                                     </div>
 
-                                    <a href="course-single-v5.html" class="card-img sk-thumbnail img-ratio-9 d-block">
+                                    <a href="{{i.get_absolute_url}}" class="card-img sk-thumbnail img-ratio-9 d-block">
                                         <img class="rounded shadow-light-lg" src="/{{i.featured_image}}" alt="...">
                                     </a>
 
@@ -226,19 +223,19 @@
 
                                 <!-- Footer -->
                                 <div class="card-footer px-2 pb-2 mb-1 pt-4 position-relative">
-                                    <a href="course-single-v5.html" class="d-block">
+                                    <a href="{{i.get_absolute_url}}" class="d-block">
                                         <div class="avatar avatar-xl badge-float position-absolute top-0 right-0 mt-n6 me-5 rounded-circle shadow border border-white border-w-lg">
                                             <img src="{{i.author.author_profile}}" alt="..." class="avatar-img rounded-circle">
                                         </div>
                                     </a>
 
                                     <!-- Preheading -->
-                                    <a href="course-single-v5.html"><span class="mb-1 d-inline-block text-gray-800">{{i.category}}</span></a>
+                                    <a href="{{i.get_absolute_url}}"><span class="mb-1 d-inline-block text-gray-800">{{i.category}}</span></a>
 
 
                                     <!-- Heading -->
                                     <div class="position-relative">
-                                        <a href="course-single-v5.html" class="d-block stretched-link"><h4 class="line-clamp-2 h-md-48 h-lg-58 me-md-6 me-lg-10 me-xl-4 mb-2">{{i.title}}</h4></a>
+                                        <a href="{{i.get_absolute_url}}" class="d-block stretched-link"><h4 class="line-clamp-2 h-md-48 h-lg-58 me-md-6 me-lg-10 me-xl-4 mb-2">{{i.title}}</h4></a>
 
                                         <div class="d-lg-flex align-items-end flex-wrap mb-n1">
                                             <div class="star-rating mb-2 mb-lg-0 me-lg-3">
@@ -313,7 +310,7 @@
                     <p class="font-size-lg mb-0 text-capitalize">Cum doctus civibus efficiantur in imperdiet deterruisset.</p>
                 </div>
                 <div class="col-md-auto">
-                    <a href="course-list-v6.html" class="d-flex align-items-center fw-medium">
+                    <a href="{% url 'singlecourse' %}" class="d-flex align-items-center fw-medium">
                         Browse All
                         <div class="ms-2 d-flex">
                             <!-- Icon -->
@@ -330,7 +327,7 @@
                 {% for category in category %}
                 <div class="col mb-md-6 mb-4 px-2 px-md-4">
                     <!-- Card -->
-                    <a href="course-list-v6.html" class="card bg-lavender hover-gradient-1 rounded-lg p-md-5 p-3 h-210p text-center lift">
+                    <a href="" class="card bg-lavender hover-gradient-1 rounded-lg p-md-5 p-3 h-210p text-center lift">
                         <!-- Image -->
                         <div class="mt-7 text-gigas display-4">
                             <i class="{{ category.icon }}"></i>
@@ -357,7 +354,7 @@
                     <p class="font-size-lg mb-0 text-capitalize">Discover your perfect program in our courses.</p>
                 </div>
                 <div class="col-md-auto">
-                    <a href="blog-grid-v2.html" class="d-flex align-items-center fw-medium">
+                    <a href="{% url 'aboutus' %}" class="d-flex align-items-center fw-medium">
                         Browse All
                         <div class="ms-2 d-flex">
                             <!-- Icon -->
@@ -376,7 +373,7 @@
                     <div class="card border shadow p-2 rounded-lg lift sk-fade">
                         <!-- Image -->
                         <div class="card-zoom position-relative">
-                            <a href="blog-single.html" class="card-img d-block sk-thumbnail img-ratio-3"><img class="rounded shadow-light-lg img-fluid" src="{% static 'assets/img/post/post-1.jpg' %}" alt="..."></a>
+                            <a href="{% url 'aboutus' %}" class="card-img d-block sk-thumbnail img-ratio-3"><img class="rounded shadow-light-lg img-fluid" src="{% static 'assets/img/post/post-1.jpg' %}" alt="..."></a>
 
                             <a href="#" class="badge sk-fade-bottom badge-lg badge-purple badge-pill badge-float bottom-0 left-0 mb-4 ms-4 px-5 me-4">
                                 <span class="text-white fw-normal font-size-sm">Figma</span>
@@ -387,7 +384,7 @@
                         <div class="card-footer px-2 pb-0 pt-4">
                             <ul class="nav mx-n3 mb-3">
                                 <li class="nav-item px-3">
-                                    <a href="blog-single.html" class="d-flex align-items-center text-gray-800">
+                                    <a href="{% url 'aboutus' %}" class="d-flex align-items-center text-gray-800">
                                         <div class="me-3 d-flex">
                                             <!-- Icon -->
                                             <svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg">
@@ -399,7 +396,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item px-3">
-                                    <a href="blog-single.html" class="d-flex align-items-center text-gray-800">
+                                    <a href="{% url 'aboutus' %}" class="d-flex align-items-center text-gray-800">
                                         <div class="me-2 d-flex">
                                             <!-- Icon -->
                                             <svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg">
@@ -413,7 +410,7 @@
                             </ul>
 
                             <!-- Heading -->
-                            <a href="blog-single.html" class="d-block"><h5 class="line-clamp-2 h-48 h-lg-52">The Best Destinations to Begin Your Round the World Trip</h5></a>
+                            <a href="{% url 'aboutus' %}" class="d-block"><h5 class="line-clamp-2 h-48 h-lg-52">The Best Destinations to Begin Your Round the World Trip</h5></a>
                         </div>
                     </div>
                 </div>
@@ -423,7 +420,7 @@
                     <div class="card border shadow p-2 rounded-lg lift sk-fade">
                         <!-- Image -->
                         <div class="card-zoom position-relative">
-                            <a href="blog-single.html" class="card-img d-block sk-thumbnail img-ratio-3"><img class="rounded shadow-light-lg img-fluid" src="{% static 'assets/img/post/post-2.jpg' %}" alt="..."></a>
+                            <a href="{% url 'aboutus' %}" class="card-img d-block sk-thumbnail img-ratio-3"><img class="rounded shadow-light-lg img-fluid" src="{% static 'assets/img/post/post-2.jpg' %}" alt="..."></a>
 
                             <a href="#" class="badge sk-fade-bottom badge-lg badge-purple badge-pill badge-float bottom-0 left-0 mb-4 ms-4 px-5 me-4">
                                 <span class="text-white fw-normal font-size-sm">Adobe XD</span>
@@ -434,7 +431,7 @@
                         <div class="card-footer px-2 pb-0 pt-4">
                             <ul class="nav mx-n3 mb-3">
                                 <li class="nav-item px-3">
-                                    <a href="blog-single.html" class="d-flex align-items-center text-gray-800">
+                                    <a href="{% url 'aboutus' %}" class="d-flex align-items-center text-gray-800">
                                         <div class="me-3 d-flex">
                                             <!-- Icon -->
                                             <svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg">
@@ -446,7 +443,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item px-3">
-                                    <a href="blog-single.html" class="d-flex align-items-center text-gray-800">
+                                    <a href="{% url 'aboutus' %}" class="d-flex align-items-center text-gray-800">
                                         <div class="me-2 d-flex">
                                             <!-- Icon -->
                                             <svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg">
@@ -460,7 +457,7 @@
                             </ul>
 
                             <!-- Heading -->
-                            <a href="blog-single.html" class="d-block"><h5 class="line-clamp-2 h-48 h-lg-52">An Indigenous Anatolian Syllabic Script From 3500 Years Ago</h5></a>
+                            <a href="{% url 'aboutus' %}" class="d-block"><h5 class="line-clamp-2 h-48 h-lg-52">An Indigenous Anatolian Syllabic Script From 3500 Years Ago</h5></a>
                         </div>
                     </div>
                 </div>
@@ -470,9 +467,9 @@
                     <div class="card border shadow p-2 rounded-lg lift sk-fade">
                         <!-- Image -->
                         <div class="card-zoom position-relative">
-                            <a href="blog-single.html" class="card-img d-block sk-thumbnail img-ratio-3"><img class="rounded shadow-light-lg img-fluid" src="{% static 'assets/img/post/post-9.jpg' %}" alt="..."></a>
+                            <a href="{% url 'aboutus' %}" class="card-img d-block sk-thumbnail img-ratio-3"><img class="rounded shadow-light-lg img-fluid" src="{% static 'assets/img/post/post-9.jpg' %}" alt="..."></a>
 
-                            <a href="blog-single.html" class="badge badge-lg sk-fade-bottom badge-purple badge-pill badge-float bottom-0 left-0 mb-4 ms-4 px-5 me-4">
+                            <a href="{% url 'aboutus' %}" class="badge badge-lg sk-fade-bottom badge-purple badge-pill badge-float bottom-0 left-0 mb-4 ms-4 px-5 me-4">
                                 <span class="text-white fw-normal font-size-sm">Photoshop</span>
                             </a>
                         </div>
@@ -481,7 +478,7 @@
                         <div class="card-footer px-2 pb-0 pt-4">
                             <ul class="nav mx-n3 mb-3">
                                 <li class="nav-item px-3">
-                                    <a href="blog-single.html" class="d-flex align-items-center text-gray-800">
+                                    <a href="{% url 'aboutus' %}" class="d-flex align-items-center text-gray-800">
                                         <div class="me-3 d-flex">
                                             <!-- Icon -->
                                             <svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg">
@@ -493,7 +490,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item px-3">
-                                    <a href="blog-single.html" class="d-flex align-items-center text-gray-800">
+                                    <a href="{% url 'aboutus' %}" class="d-flex align-items-center text-gray-800">
                                         <div class="me-2 d-flex">
                                             <!-- Icon -->
                                             <svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg">
@@ -507,7 +504,7 @@
                             </ul>
 
                             <!-- Heading -->
-                            <a href="blog-single.html" class="d-block"><h5 class="line-clamp-2 h-48 h-lg-52">10 Best Countries to Visit for Beginner Travelers</h5></a>
+                            <a href="{% url 'aboutus' %}" class="d-block"><h5 class="line-clamp-2 h-48 h-lg-52">10 Best Countries to Visit for Beginner Travelers</h5></a>
                         </div>
                     </div>
                 </div>
@@ -517,9 +514,9 @@
                     <div class="card border shadow p-2 rounded-lg lift sk-fade">
                         <!-- Image -->
                         <div class="card-zoom position-relative">
-                            <a href="blog-single.html" class="card-img d-block sk-thumbnail img-ratio-3"><img class="rounded shadow-light-lg img-fluid" src="{% static 'assets/img/post/post-3.jpg' %}" alt="..."></a>
+                            <a href="{% url 'aboutus' %}" class="card-img d-block sk-thumbnail img-ratio-3"><img class="rounded shadow-light-lg img-fluid" src="{% static 'assets/img/post/post-3.jpg' %}" alt="..."></a>
 
-                            <a href="blog-single.html" class="badge badge-lg sk-fade-bottom badge-purple badge-pill badge-float bottom-0 left-0 mb-4 ms-4 px-5 me-4">
+                            <a href="{% url 'aboutus' %}" class="badge badge-lg sk-fade-bottom badge-purple badge-pill badge-float bottom-0 left-0 mb-4 ms-4 px-5 me-4">
                                 <span class="text-white fw-normal font-size-sm">Photoshop</span>
                             </a>
                         </div>
@@ -528,7 +525,7 @@
                         <div class="card-footer px-2 pb-0 pt-4">
                             <ul class="nav mx-n3 mb-3">
                                 <li class="nav-item px-3">
-                                    <a href="blog-single.html" class="d-flex align-items-center text-gray-800">
+                                    <a href="{% url 'aboutus' %}" class="d-flex align-items-center text-gray-800">
                                         <div class="me-3 d-flex">
                                             <!-- Icon -->
                                             <svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg">
@@ -540,7 +537,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item px-3">
-                                    <a href="blog-single.html" class="d-flex align-items-center text-gray-800">
+                                    <a href="{% url 'aboutus' %}" class="d-flex align-items-center text-gray-800">
                                         <div class="me-2 d-flex">
                                             <!-- Icon -->
                                             <svg width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg">
@@ -554,7 +551,7 @@
                             </ul>
 
                             <!-- Heading -->
-                            <a href="blog-single.html" class="d-block"><h5 class="line-clamp-2 h-48 h-lg-52">10 Best Countries to Visit for Beginner Travelers</h5></a>
+                            <a href="{% url 'aboutus' %}" class="d-block"><h5 class="line-clamp-2 h-48 h-lg-52">10 Best Countries to Visit for Beginner Travelers</h5></a>
                         </div>
                     </div>
                 </div>
