--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -4,7 +4,7 @@
         <div class="container">
 
             <!-- Brand -->
-            <a class="navbar-brand" href="">
+            <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="{% static 'assets/img/logo.svg' %}" class="navbar-brand-img" alt="...">
             </a>
 
