--- a/templates/components/modals.html
+++ b/templates/components/modals.html
@@ -83,7 +83,7 @@
     </div>
 
     <div class="modal modal-sidebar left fade-left fade" id="accountModal">
-        <div class="modal-dialog">
+        <div class="modal-dialog" style="min-height: 100vh; height: auto;">
             <div class="modal-content">
                 <!-- Signin -->
                 <div class="collapse show" id="collapseSignin" data-bs-parent="#accountModal">
