--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -83,7 +83,7 @@
                             <!-- List -->
                             <ul class="list-unstyled text-gray-800 font-size-sm-alone mb-6 mb-md-8 mb-lg-0">
                                 <li class="mb-3">
-                                    <a href="about-v1.html" class="text-reset">
+                                    <a href="{% url 'aboutus' %}" class="text-reset">
                                         Our Company
                                     </a>
                                 </li>
