--- a/templates/components/modals.html
+++ b/templates/components/modals.html
@@ -127,8 +127,8 @@
                                     </label>
                                 </div>
 
-                                <div class="ms-auto">
-                                    <a class="text-gray-800" data-bs-toggle="collapse" href="#collapseForgotPassword" role="button" aria-expanded="false" aria-controls="collapseForgotPassword">Forgot Password</a>
+                                <div class="ms-auto" >
+                                <a class="text-gray-800" href="{% url 'password_reset' %}" target="_blank">Forgot Password</a>
                                 </div>
                             </div>
 
